--- a/css/me.css
+++ b/css/me.css
@@ -11,7 +11,7 @@
 
 body {
   color: black;
-  background-color: #cfedfb;
+  background-color: white;
   padding: 20px 30px;
   font-size: 16pt;
   font-family: 'Raleway-Regular', "Century Gothic", arial; 
@@ -61,16 +61,19 @@ a.sel {
   top: -20px;
 }
 .sociallinks img{
-  margin: 10px 15px;
+  margin: 10px 10px 0 0;
   width:30px;
 } 
 .avatar{
-  width:270px;
   float:right;
-  margin: 0 10px 0 20px;
+  width: 300px;
+  padding: 15px;
+  margin: 0 10px 10px 20px;
+  background-color: white;
 }
 .avatar > img{
-  width: 250px;
+  height: 300px;
+  width: 300px;
   border-radius: 5px;
   margin-bottom: 10px;
 }
