--- a/css/me.css
+++ b/css/me.css
@@ -57,8 +57,9 @@ a.sel {
   height: 200px;
 }
 .linkMore{
-  position: relative;
-  top: -20px;
+  display: block;
+  width: 160px;
+  margin: 0 20px;
 }
 .sociallinks img{
   margin: 10px 10px 0 0;
