--- a/css/me.css
+++ b/css/me.css
@@ -30,7 +30,9 @@ a:hover {
 
 .helloworld{
   padding: 20px 0;
+  min-width: 600px;
 }
+
 
 .clearer{
   clear: both;
@@ -127,9 +129,22 @@ p.clearer{
   float:right;
   text-align: center;
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 480px) {
   .avatar-holder{
     width:100%;
+  }
+  .avatar{
+    padding:0;
+    margin:0;
+  }
+}
+@media only screen and (max-width: 700px) {
+  .avatar-holder{
+    float:none;
+  }
+  .helloworld{
+    padding: 0;
+    margin: 0;
   }
 }
 .avatar{
@@ -241,6 +256,7 @@ section{
 @media only screen and (max-width: 480px) {
   .sTitle{
     font-size: 1em;
+    left: -105px;
   }
   section{ 
     padding: 0 0 10px 45px;
