--- a/css/me.css
+++ b/css/me.css
@@ -119,7 +119,7 @@ p.clearer{
 .avatar-holder{
   float:right;
   text-align: center;
-  margin-bottom: 10px;
+  margin: 0 5px 10px 0;
 }
 @media only screen and (max-width: 480px) {
   .avatar-holder{
