Recipes: pear cream tart recipe + "desserts" page, link in navigation bar, and favicon.

--- a/css/me.css
+++ b/css/me.css
@@ -10,7 +10,7 @@
 
 body {
   margin: 0;
-  padding: 5px;
+  padding: 0;
   color: black;
   background-color: white;
   font-size: 16pt;
@@ -171,6 +171,10 @@ p.clearer{
 .pixTitleHolder > a{
   background-color: transparent !important;
 }
+.pixTitleHolder .pix-title{
+  text-align: center;
+}
+
 .pixTitle{
     z-index: 700;
     position: absolute;
@@ -333,7 +337,9 @@ section.c7{
 section.c0{
     z-index: 50;
 }
-
+.idx > section{
+  margin-bottom: 70px;
+}
 .c7-dots{
   z-index: 1500;
   padding: 5px 0;
@@ -451,4 +457,22 @@ section.c0{
 .bottomSpace{
   margin-top:100px;
   height: 40%;
+}
+
+.iceCreamCard > div{
+  float:left;
+    margin: 10px 10px 0 0;
+    float: left;
+    width: 250px;
+    height: 200px;
+}
+.iceCreamCard>div>strong{
+  margin-left: 17px;
+}
+
+.cog{
+  font-size: .8em;
+  color: silver;
+  padding: 20px;
+  margin: 20px 45px 10px 5px
 }
