--- a/css/me.css
+++ b/css/me.css
@@ -35,9 +35,12 @@ a:hover {
 }
 
 footer{
-  font-size: .8em;
   color: silver;
+  font-size: .8em;
   margin: 10px 20px;
+}
+footer:hover{
+  color: navy;
 }
 .grey{
   color: silver;
