Added icon to external links.

--- a/css/me.css
+++ b/css/me.css
@@ -34,6 +34,9 @@ a:hover {
   background-color: #bbeffd;
   border-bottom-color: #1a1a1a;
 }
+.extlink:after {
+  content: " " url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAVklEQVR4Xn3PgQkAMQhDUXfqTu7kTtkpd5RA8AInfArtQ2iRXFWT2QedAfttj2FsPIOE1eCOlEuoWWjgzYaB/IkeGOrxXhqB+uA9Bfcm0lAZuh+YIeAD+cAqSz4kCMUAAAAASUVORK5CYII=);
+}
 
 footer{
   color: silver;
