--- a/css/me.css
+++ b/css/me.css
@@ -298,7 +298,7 @@ span.sTitle{
 section{
   position: relative;
   padding: 10px 10px 10px 120px;
-  border-left: solid 8px transparent;
+  border-left: solid 28px transparent;
   margin: 20px 45px 45px 5px;
 
   line-height: 30px;
@@ -376,13 +376,13 @@ section.c0{
   text-decoration: none;
   border:none;
 }
-.c7-dots > a >.sTitle{
+.c7-dots > a > .sTitle{
   z-index: 10;
     opacity: 0;
     display: block;
     position: absolute;
     font-size: 1.2em;
-    left: -70px;
+    left: -50px;
     top: 65px;
     border: none;
 }
@@ -502,6 +502,7 @@ section.c0{
   display: block;
 }
 .egg {
+  width: 800px;
   padding: 50px 100px;
 }
 #you{
@@ -549,7 +550,7 @@ section.c0{
     height: 24px;
     width: 24px;
     text-align: center;
-}
+} 
 .c7 {
   border-color: #9c27b0;
 }
@@ -562,4 +563,89 @@ section.c0{
 #comics_euro_us2{
   max-width: 500px;
   margin: 20px 10px;
+}
+
+.hello,
+.dear,
+.me,
+.japancircle {
+  color: white;
+  display: inline-block;
+  border-radius: 50%;
+  padding: 40px;
+
+}
+.me{
+  background-color: #9c27b0;
+	width : 520px;
+	height : 520px;
+}
+.me > div {
+  margin: 80px 100px;
+  max-width: 400px;
+}
+.me a {
+  background-color: #7B1FA2;
+  color: white;
+}
+.me a:hover {
+  background-color: #4A148C;
+}
+.hello { 
+  background-color:  #03A9F4;
+  width: 90px;
+  height: 90px;
+}
+.helloworld{
+  position: relative;
+  top: -14px;
+}
+.dear {
+  color: white;
+  text-align: center;
+  position: absolute; 
+  top: 40px;
+  left: 380px;
+  height: 120px;
+  width: 120px;
+  background-color: #ffb74d;
+  line-height: 40px;
+} 
+@media only screen and (max-width: 750px){ 
+  .hello {
+    display: none !important;
+  }
+  section {
+    padding-left: 80px !important;
+  }
+}
+@media only screen and (max-width: 900px){ 
+  .japancircle {
+    display: none !important;
+  }
+}
+@media only screen and (max-width: 1000px){ 
+  .dear {
+    display: none;
+  }
+  #me {
+    padding-left: 80px;
+  }
+}
+@media print {
+  .dear {
+    display: none;
+  }
+  @page {
+    margin: 1cm 1cm;
+  }
+}
+
+.japancircle { 
+  position: absolute;
+  height: 240px;
+  width: 240px; 
+  top: 570px;
+  left: 600px; 
+  background-image: url("../pix/bg2.gif");
 }
