--- a/css/me.css
+++ b/css/me.css
@@ -653,3 +653,60 @@ section.c7{
   left: 600px; 
   background-image: url("../pix/bg2.gif");
 }
+
+.center404{
+  position: relative;
+  margin: 40px;
+  text-align: center;
+}
+.center404 > p {
+  margin: 10px;
+}
+.circles404{
+  position: relative;
+  display: block;
+  margin: 50px auto 10px;
+  height: 440px;
+  width: 600px;
+}
+.circles404 p {
+  position: absolute;
+  top: 160px;
+  z-index: 50;
+}
+.left404,
+.spot404,
+.right404{
+  position: absolute;
+  color: white;
+  border-radius: 50%;
+  width: 400px;
+  height: 400px;
+}
+.left404{
+  left: 0;
+  overflow: hidden;
+  background-color: #FFB74D;
+  z-index: 20;
+}
+.spot404{
+  background: #E65C27;
+  top: 0;
+  right: -50%;
+}
+.right404{
+  background-color: #CC0000;
+  left: 200px;
+  z-index: 10;
+}
+.left404 > p {
+  left: 55px;
+}
+.spot404 > p {
+  top: 145px;
+  left: 40px;
+  font-size: 1.4em;
+}
+.right404 > p {
+  right: 30px;
+}
