--- a/css/me.css
+++ b/css/me.css
@@ -61,7 +61,9 @@ footer:hover{
 p.clearer{
   padding-top: 25px;
 }
-
+td {
+  vertical-align: top;
+}
 .pixShadow,
 .pixGroup img{
   position: relative;
@@ -154,7 +156,15 @@ p.clearer{
 .avatar > div > img:hover{
   border-color: #4dd0e1;
 }
+
 @media only screen and (max-width: 480px) {
+  section{ 
+    padding: 0 0 10px 45px;
+    margin: 20px 20px 20px 5px;
+  }
+  .c7-dots{
+    display: none;
+  }
   .avatar-holder{
     width: 100%;
   }
@@ -195,43 +205,41 @@ p.clearer{
     display: none;
     white-space: nowrap;
     background-color: white;
-/*
-    font-size: .9em;
-    width:300px;
-    width:140px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-*/
 }
 
 .pixTitleHolder:hover .pixTitle{ 
   display: block;
 }
-
+.dTitle,
 .sTitle{
-    position: absolute;
-    height: 30px;
-    width: 310px;
-    top: 142px;
-    left: -125px;
-    font-size: 2em;
     text-shadow: 1px 1px 1px silver;
-
-    -webkit-transform: rotate(90deg);
-    -moz-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
-    -o-transform: rotate(90deg);
     filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
 }
-span.sTitle{
+.dTitle{
+  position: absolute;
+  height: 30px;
+  width: 310px;
   width: 230px;
   top: 107px;
   left: -90px;
   font-size: 1.5em;
+  -webkit-transform: rotate(90deg);
+  -moz-transform: rotate(90deg);
+  -ms-transform: rotate(90deg);
+  -o-transform: rotate(90deg);
+}
+.sTitle{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  font-size: 2em;
+  writing-mode: vertical-rl;
+  text-orientation: mixed;
 }
 
 .c1 .pixTitle,
-.c1>.sTitle{
+.c1 .dTitle,
+.c1 .sTitle{
     color: #e57373;
 }
 .c1 .pixGroup img:hover{
@@ -239,42 +247,48 @@ span.sTitle{
 }
 .c3 .pixTitle,
 .c2 .pixTitle,
-.c2>.sTitle{
+.c2 .dTitle,
+.c2 .sTitle{
     color: #ffb74d;
 }
 .c2 .pixGroup img:hover,
 .c3 .pixGroup img:hover{
   border-color: #ffb74d;
 }
-.c3>.sTitle{
+.c3 .dTitle,
+.c3 .sTitle{
     color: #ffd54f;
 }
 .c3 .pixGroup img:hover{
   border-color: #ffd54f;
 }
 .c4 .pixTitle,
-.c4>.sTitle{
+.c4 .dTitle,
+.c4 .sTitle{
     color: #81c784;
 }
 .c4 .pixGroup img:hover{
   border-color: #81c784;
 }
 .c5 .pixTitle,
-.c5>.sTitle{
+.c5 .dTitle,
+.c5 .sTitle{
     color: #4dd0e1;
 }
 .c5 .pixGroup img:hover{
   border-color: #4dd0e1;
 }
 .c6 .pixTitle,
-.c6>.sTitle{
+.c6 .dTitle,
+.c6 .sTitle{
     color: #7986cb;
 }
 .c6 .pixGroup img:hover{
   border-color: #7986cb;
 }
 .c7 .pixTitle,
-.c7>.sTitle{
+.c7 .dTitle,
+.c7 .sTitle{
     color: #ba68c8;
 }
 .c0 .pixTitle{
@@ -283,52 +297,43 @@ span.sTitle{
 .c00{
   padding: 0 10px 10px 20px;
 }
-
+td:first-child,
 section{
   position: relative;
-  padding: 10px 20px 10px 100px;
   border-left: solid 28px transparent;
-  margin: 20px 45px 45px 5px;
-
+  padding-left: 10px;
   line-height: 30px;
 }
-
-@media only screen and (max-width: 480px) {
-  .sTitle{
-    font-size: 1.2em;
-    left: -140px;
-  }
-  section{ 
-    padding: 0 0 10px 45px;
-    margin: 20px 45px 20px 5px;
-  }
-  .c7-dots{
-    display: none;
-  }
+table,
+section{
+  margin: 20px 45px 45px 5px;
+}
+.pad{
+  padding: 10px 20px 10px 80px;
 }
 
 section.c0{
     z-index: 50;
 }
-section.c1{
+.c1 > td:first-child{
     border-color: #e57373;
 }
-section.c2{
+.c2 > td:first-child{
     border-color: #ffb74d;
 }
-section.c3{
+.c3 > td:first-child{
     border-color: #ffd54f;
 }
-section.c4{
+.c4 > td:first-child{
     border-color: #81c784;
 }
-section.c5{
+.c5 > td:first-child{
     border-color: #4dd0e1;
 }
-section.c6{
+.c6 > td:first-child{
     border-color: #7986cb;
 }
-section.c7{
+.c7 > td:first-child{
     border-color: #ba68c8;
 }
 
@@ -351,7 +356,7 @@ section.c7{
   text-decoration: none;
   border:none;
 }
-.c7-dots > a > .sTitle{
+.c7-dots > a > .dTitle{
   z-index: 10;
   opacity: 0;
   display: block;
@@ -361,7 +366,7 @@ section.c7{
   top: 65px;
   border: none;
 }
-.c7-dots > a:hover > .sTitle{
+.c7-dots > a:hover > .dTitle{
   z-index: 10;
   opacity: 1;
   top: 90px;
@@ -582,12 +587,25 @@ section.c7{
   background-color: #ffb74d;
   line-height: 40px;
 }
+.japancircle { 
+  position: absolute;
+  height: 240px;
+  width: 240px; 
+  top: 570px;
+  left: 600px; 
+  background-image: url("../pix/bg2.gif");
+}
 
 @media only screen and (max-width: 750px){ 
   .hello {
     display: none !important;
   }
+  td:first-child,
   section {
+    border-left-width: 6px;
+    padding-left: 0;
+  }
+  .pad {
     padding-left: 50px !important;
     border-left-width: 6px;
   }
@@ -595,7 +613,7 @@ section.c7{
     border-radius: 0;
     width: auto;
     height: auto;
-    padding: 0;
+    padding: 0 5px;
   }
   .me > div {
     margin: 10px;
@@ -616,9 +634,6 @@ section.c7{
 @media only screen and (max-width: 1000px){ 
   .dear {
     display: none;
-  }
-  #me {
-    padding-left: 80px;
   }
 }
 @media print {
@@ -643,15 +658,6 @@ section.c7{
     margin: 1cm 1cm;
   }
 
-}
-
-.japancircle { 
-  position: absolute;
-  height: 240px;
-  width: 240px; 
-  top: 570px;
-  left: 600px; 
-  background-image: url("../pix/bg2.gif");
 }
 
 .center404{
