--- a/css/me.css
+++ b/css/me.css
@@ -157,32 +157,6 @@ td {
   border-color: #4dd0e1;
 }
 
-@media only screen and (max-width: 480px) {
-  section{ 
-    padding: 0 0 10px 45px;
-    margin: 20px 20px 20px 5px;
-  }
-  .c7-dots{
-    display: none;
-  }
-  .avatar-holder{
-    width: 100%;
-  }
-  .avatar{
-    padding: 0;
-    margin: 0;
-  }
-}
-@media only screen and (max-width: 700px) {
-  .avatar-holder{
-    float:none;
-  }
-  .helloworld{
-    padding: 0;
-    margin: 0;
-  }
-}
-
 .pixTitleHolder{
   position: relative;
   float: left;
@@ -231,10 +205,15 @@ td {
 .sTitle{
   position: -webkit-sticky;
   position: sticky;
-  top: 0;
+  top: 5px;
   font-size: 2em;
   writing-mode: vertical-rl;
   text-orientation: mixed;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .c1 .pixTitle,
@@ -482,7 +461,8 @@ section.c0{
 }
 #egg {
   width: 800px;
-  padding: 50px 100px;
+  padding: 0 10px 0 0;
+  margin: 50px auto;
 }
 #you{
   border-radius: 50%;
@@ -581,7 +561,7 @@ section.c0{
   text-align: center;
   position: absolute; 
   top: 40px;
-  left: 380px;
+  left: 370px;
   height: 120px;
   width: 120px;
   background-color: #ffb74d;
@@ -596,9 +576,36 @@ section.c0{
   background-image: url("../pix/bg2.gif");
 }
 
+@media only screen and (max-width: 480px) {
+  section{ 
+    padding: 0 0 10px 45px;
+    margin: 20px 20px 20px 5px;
+  }
+  .c7-dots{
+    display: none;
+  }
+  .avatar-holder{
+    width: 100%;
+  }
+  .avatar{
+    padding: 0;
+    margin: 0;
+  }
+  .pixShadow,
+  .pixGroup img{
+    margin: 4px;
+  }
+}
 @media only screen and (max-width: 750px){ 
   .hello {
     display: none !important;
+  }
+  .avatar-holder{
+    float: none;
+  }
+  .helloworld{
+    padding: 0;
+    margin: 0;
   }
   td:first-child,
   section {
@@ -606,7 +613,7 @@ section.c0{
     padding-left: 0;
   }
   .pad {
-    padding-left: 50px !important;
+    padding: 0 10px 10px !important;
     border-left-width: 6px;
   }
   .me{
@@ -614,6 +621,7 @@ section.c0{
     width: auto;
     height: auto;
     padding: 0 5px;
+    margin: 0 0 0 30px;
   }
   .me > div {
     margin: 10px;
